fixing focus border button overlap issue

--- a/americanlibrary.css
+++ b/americanlibrary.css
@@ -2101,7 +2101,7 @@ p.gi-info--alert, p.gi-info--primary, p.gi-info--secondary {
   }*/
 }
 .icmform .field_upload input.icmlfile.icmlfile--clear {
-  padding-left: 0px;
+  padding-left: 2px;
 }
 .icmform .icmformleft label, .icmform .icmformright label {
   font-size: 1.1875rem;
